# funocaml-2025-rl

./: dune-project
docs/: RL_Introduction-Briefer.md
src/: exercise5.md
src-stage2/: dune  exercise1_solution.ml  plots.ml  run4_batched.ml  slide4_batched.ml  slide6_batched.ml  test_a2c_batched.ml  test_batched.ml
src-stage3/: dune  exercise4-solution.md  exercise4_cnn.ml  plots.ml  slide4.ml  slide4_cnn.ml  slide6_cnn.ml  slide9_batched.ml  slide9_cnn.ml  test_cnn_comparison.ml  test_cnn_init_debug.ml  test_cnn_network_debug.ml  test_conv2d_debug.ml  test_ppo_batched.ml
